2006-07-30 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* improved errorhandling a bit. At the initialscan we store
	  errors/warnings now in a list per partition and show the in the
	  partitioninfo dialog.
	  While executing an operation we collect all libparted exceptions in
	  a list and attach this list to the operationdetails when everything
	  is done.

2006-07-29 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* renamed some enums

2006-07-29 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: fixed a couple of small errors in the
	  copy algorithm (which is closely related to moving)

2006-07-29 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: fixed a couple of small errors in the
	  move algorithm

2006-07-29 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* fixed Pango markup problems in operationdetails
	* restructured OperationDetail
	* renamed some enums for improved readability of the source

2006-07-23 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/FileSystem.h,
	  include/GParted_Core.h,
	  src/FileSystem.cc,
	  src/GParted_Core.cc,
	  src/ext2.cc,
	  src/ext3.cc,
	  src/ntfs.cc,
	  src/reiserfs.cc: removed cylindersize buffering during resize from
	  the filesystems. It is not needed anymore now we calculate the new
	  position before calling this.
	  Also added some extra progressfeedback in the core

2006-07-23 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/GParted_Core.h,
	  src/GParted_Core.cc: more work on moving/resizing sequence

2006-07-23 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: fixed issue with resize/move of extended
	  partitions

2006-07-23 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* src/Win_GParted.cc: added FIXME:
	* include/GParted_Core.h,
	  src/GParted_Core.cc,
	  src/fat32.cc: decoupled libparted partition and filesystemresizing.
	  This resulted in a much more consistent core. This also affected
	  several other aspects of resizing/moving in a positive way.
