@@ -1,3 +1,10 @@
+2006-08-01 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* src/Dialog_Partition_Copy.cc,
+	  src/GParted_Core.cc,
+	  src/Win_GParted.cc: fixed some issues when manipulating a just
+	  copied partition. (see also #349513)
+
 2006-07-30 Bart Hakvoort <hakvoort@cvs.gnome.org>
 	
 	* improved errorhandling a bit. At the initialscan we store
